internal/gatewayapi/testdata/securitypolicy-listenerset.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: composite-gateway
    namespace: envoy-gateway
  spec:
    allowedListeners:
      namespaces:
        from: All
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: http-8080
      port: 8080
      protocol: HTTP
  status:
    attachedListenerSets: 1
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http-8080
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: route-on-gw
    namespace: default
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: composite-gateway
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: composite-gateway
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: route-on-ls
    namespace: default
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: ext-listeners
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: ext-listeners
        namespace: envoy-gateway
infraIR:
  envoy-gateway/composite-gateway:
    proxy:
      listeners:
      - name: envoy-gateway/composite-gateway/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - name: envoy-gateway/composite-gateway/http-8080
        ports:
        - containerPort: 8080
          name: http-8080
          protocol: HTTP
          servicePort: 8080
      - name: envoy-gateway/composite-gateway/envoy-gateway/ext-listeners/ext-http-1
        ports:
        - containerPort: 8081
          name: http-8081
          protocol: HTTP
          servicePort: 8081
      - name: envoy-gateway/composite-gateway/envoy-gateway/ext-listeners/ext-http-2
        ports:
        - containerPort: 8082
          name: http-8082
          protocol: HTTP
          servicePort: 8082
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: composite-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/composite-gateway
      namespace: envoy-gateway-system
listenerSets:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: ext-listeners
    namespace: envoy-gateway
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: ext-http-1
      port: 8081
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: ext-http-2
      port: 8082
      protocol: HTTP
    parentRef:
      name: composite-gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: All listeners are accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: All listeners are programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: ext-http-1
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: ext-http-2
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: target-listenerset-section
    namespace: envoy-gateway
  spec:
    cors:
      allowOrigins:
      - https://ls-section.example.com
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: ext-listeners
      sectionName: ext-http-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: ext-listeners
        namespace: envoy-gateway
        sectionName: ext-http-1
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: target-listenerset
    namespace: envoy-gateway
  spec:
    cors:
      allowOrigins:
      - https://ls.example.com
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: ext-listeners
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: ext-listeners
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: 'This policy is being overridden by other securityPolicies for these
          listenerset listeners: [envoy-gateway/ext-listeners/ext-http-1]'
        reason: Overridden
        status: "True"
        type: Overridden
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: target-gw-section
    namespace: envoy-gateway
  spec:
    cors:
      allowOrigins:
      - https://gw-section.example.com
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: composite-gateway
      sectionName: http-8080
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: composite-gateway
        namespace: envoy-gateway
        sectionName: http-8080
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: target-gw
    namespace: envoy-gateway
  spec:
    cors:
      allowOrigins:
      - https://gw.example.com
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: composite-gateway
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: composite-gateway
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: 'This policy is being overridden by other securityPolicies for these
          gateway listeners: [envoy-gateway/composite-gateway/http-8080] and these
          listenersets: [envoy-gateway/ext-listeners] and these listenerset listeners:
          [envoy-gateway/ext-listeners/ext-http-1]'
        reason: Overridden
        status: "True"
        type: Overridden
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
xdsIR:
  envoy-gateway/composite-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-composite-gateway-5ac11688
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/composite-gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-composite-gateway-5ac11688
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/composite-gateway
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/composite-gateway/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: route-on-gw
            namespace: default
          name: httproute/default/route-on-gw/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/route-on-gw/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: route-on-gw
          namespace: default
        name: httproute/default/route-on-gw/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
        security:
          cors:
            allowOrigins:
            - distinct: false
              exact: https://gw.example.com
              name: ""
    - address: 0.0.0.0
      externalPort: 8080
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: envoy-gateway
        sectionName: http-8080
      name: envoy-gateway/composite-gateway/http-8080
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: route-on-gw
            namespace: default
          name: httproute/default/route-on-gw/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/route-on-gw/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: route-on-gw
          namespace: default
        name: httproute/default/route-on-gw/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
        security:
          cors:
            allowOrigins:
            - distinct: false
              exact: https://gw-section.example.com
              name: ""
    - address: 0.0.0.0
      externalPort: 8081
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: envoy-gateway
        sectionName: ext-http-1
      name: envoy-gateway/composite-gateway/envoy-gateway/ext-listeners/ext-http-1
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8081
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: route-on-ls
            namespace: default
          name: httproute/default/route-on-ls/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/route-on-ls/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: route-on-ls
          namespace: default
        name: httproute/default/route-on-ls/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
        security:
          cors:
            allowOrigins:
            - distinct: false
              exact: https://ls-section.example.com
              name: ""
    - address: 0.0.0.0
      externalPort: 8082
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: envoy-gateway
        sectionName: ext-http-2
      name: envoy-gateway/composite-gateway/envoy-gateway/ext-listeners/ext-http-2
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8082
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: route-on-ls
            namespace: default
          name: httproute/default/route-on-ls/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/route-on-ls/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: route-on-ls
          namespace: default
        name: httproute/default/route-on-ls/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
        security:
          cors:
            allowOrigins:
            - distinct: false
              exact: https://ls.example.com
              name: ""
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
